# tuffc

./: .eslintrc.cjs  .eslintrc.json  .eslintrc.src.cjs  .gitignore  .pmd-cpd.properties  .pre-commit-config.yaml  1-u8-literal.spec.md  2-read-stdin.spec.md  3-numeric-literals.spec.md  4-arithmetic.spec.md  CLAUDE.md  CMakeLists.txt  Cargo.toml  GAPS.md  Makefile  README.md  RESULT_MIGRATION_PLAN.md  SELF-HOST.md  SPECIFICATION.md  _t13.tuff  _t13_new.js  _t37.js  _t37.tuff  _t43.tuff  _t43_new.js  _t7.tuff  _t7_cli_test.js  _t7_native.js  _t8.tuff  _t8_native.js  _t8_new.js  _t9.tuff  _t9_new.js  _t9_out.js  _tUSize.js  _tUSize.tuff  _ttest.tuff  build-log.txt  build.ps1  bun-check-output.txt  (+102 more)
.claude/: settings.local.json
.githooks/: pre-commit
.github/: copilot-instructions.md
.husky/: pre-commit
coverage/: coverage-summary.json  lcov.info
docs/: alloc-extern-syntax-decisions.md  ast-to-tuff-emission-contract.md  build-performance-optimizations.md  collection-optimizations.md  db-test-canonicalization-plan.md  grammar.md  lifetime-sanity-audit-report.md  native-selfhost-transition.md  panic-elimination-tracking.md  panic-to-result-migration-plan.txt  panic-to-result-migration.md  realloc-capacity-proof-design.md  runtime-abi-matrix.md  runtime-infra-implementation-log.md  runtime-migration-plan.md  runtime-removal-ledger.md  stage0-vs-stage3-implementation-status.md  string-slice-migration-phase0.md  tuff-target-rollout.md  type-narrowing-guide.md  vec-fat-thin-pointer-lowering.md  vec-proof-semantics-socratic.md
examples/: control_flow.tuff  factorial.tuff  (+3 more)
(+696 files in other folders)
