[package]
name = "Tuff"
version = "0.1.0"
edition = "2021"

[lints.clippy]
# Direct panic macros
panic = "deny"
unimplemented = "deny"
todo = "deny"
unreachable = "deny"

# Unwrap/expect
unwrap_used = "deny"
expect_used = "deny"
get_unwrap = "deny"
unwrap_in_result = "deny"
panic_in_result_fn = "deny"

# Indexing/slicing
indexing_slicing = "deny"

[dependencies]
